fix(web-app): use footer z-index instead of floating

--- a/services/web-app/components/page-tabs/page-tabs.module.scss
+++ b/services/web-app/components/page-tabs/page-tabs.module.scss
@@ -14,7 +14,7 @@
 
 .container {
   position: sticky;
-  z-index: z-index.z('overlay');
+  z-index: z-index.z('footer');
   top: 3rem;
 
   &::before {
