--- a/services/web-app/components/svg-libraries/svg-library.module.scss
+++ b/services/web-app/components/svg-libraries/svg-library.module.scss
@@ -15,7 +15,7 @@
 @media screen and (prefers-reduced-motion: reduce) {
   .filter-row {
     position: sticky;
-    z-index: z-index.z('floating');
+    z-index: z-index.z('footer');
     top: 7rem;
     display: flex;
     flex-direction: column;
@@ -31,7 +31,7 @@
 
 .filter-row {
   position: sticky;
-  z-index: z-index.z('floating');
+  z-index: z-index.z('footer');
   top: 7rem;
   display: flex;
   flex-direction: column;
@@ -99,7 +99,7 @@
 
 .filter-row::before {
   position: absolute;
-  z-index: z-index.z('floating');
+  z-index: z-index.z('footer');
   top: -1rem;
   width: 100%;
   height: 1rem;
